// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppSummary renders correctly on desktop 1`] = `
<Link
  as="/details"
  href="/details"
>
  <Link
    backgroundColor="white"
    borderColor="gray-2"
    borderWidth="x1"
    className="appSummary"
    elevation="x2"
    overflow="hidden"
  >
    <Base
      height="5rem"
    >
      <_default
        endColor="#0dd3c5"
        startColor="#0d83cd"
      />
    </Base>
    <Flex
      direction="vertical"
      gap="x4"
      padding="x8"
    >
      <Flex
        alignChildrenHorizontal="start"
        alignChildrenVertical="end"
        direction="horizontal"
        gap="x4"
        style={
          Object {
            "marginTop": "-5rem",
          }
        }
      >
        <_default
          borderRadius="x2"
          margin="x0"
          src="/static/icon-flutter.svg"
          width="96px"
        />
        <Base
          paddingVertical="x2"
        >
          <Text
            color="gray-6"
            letterSpacing="x1"
            size="x3"
            weight="medium"
          >
            Updated on January 29, 2008
          </Text>
        </Base>
      </Flex>
      <Flex
        direction="vertical"
        gap="x2"
      >
        <Flex
          alignChildrenVertical="middle"
          direction="horizontal"
          gap="x1"
        >
          <Icon
            color="grape-4"
            name="PlatformsApple"
            size="1.5rem"
          />
          <Text
            breakOn="word"
            color="grape-4"
            letterSpacing="x1"
            size="x5"
            weight="bold"
          >
            My app v1.1.0 (28)
          </Text>
        </Flex>
        <Text
          breakOn="word"
          color="grape-5"
        >
          This is a short description about my app. It is a good app. End of description.
        </Text>
      </Flex>
    </Flex>
  </Link>
</Link>
`;

exports[`AppSummary renders correctly on mobile 1`] = `
<Link
  as="/details"
  href="/details"
>
  <Link
    backgroundColor="white"
    borderColor="gray-2"
    borderWidth="x1"
    className="appSummary"
    elevation="x2"
    overflow="hidden"
  >
    <Base
      height="5rem"
    >
      <_default
        endColor="#0dd3c5"
        startColor="#0d83cd"
      />
    </Base>
    <Flex
      direction="vertical"
      gap="x0"
      padding="x8"
    >
      <Flex
        alignChildrenHorizontal="middle"
        alignChildrenVertical="middle"
        direction="vertical"
        gap="x4"
        style={
          Object {
            "marginTop": "-5rem",
          }
        }
      >
        <_default
          borderRadius="x2"
          margin="x0"
          src="/static/icon-flutter.svg"
          width="96px"
        />
        <Base
          paddingVertical="x2"
        >
          <Text
            color="gray-6"
            letterSpacing="x1"
            size="x3"
            weight="medium"
          >
            Updated on January 29, 2008
          </Text>
        </Base>
      </Flex>
      <Flex
        direction="vertical"
        gap="x2"
      >
        <Flex
          alignChildrenVertical="middle"
          direction="vertical"
          gap="x1"
        >
          <Icon
            color="grape-4"
            name="PlatformsApple"
            size="1.5rem"
          />
          <Text
            breakOn="all"
            color="grape-4"
            letterSpacing="x1"
            size="x5"
            weight="bold"
          >
            My app v1.1.0 (28)
          </Text>
        </Flex>
        <Text
          breakOn="all"
          color="grape-5"
        >
          This is a short description about my app. It is a good app. End of description.
        </Text>
      </Flex>
    </Flex>
  </Link>
</Link>
`;

exports[`AppSummary renders correctly on tablet 1`] = `
<Link
  as="/details"
  href="/details"
>
  <Link
    backgroundColor="white"
    borderColor="gray-2"
    borderWidth="x1"
    className="appSummary"
    elevation="x2"
    overflow="hidden"
  >
    <Base
      height="5rem"
    >
      <_default
        endColor="#0dd3c5"
        startColor="#0d83cd"
      />
    </Base>
    <Flex
      direction="vertical"
      gap="x4"
      padding="x8"
    >
      <Flex
        alignChildrenHorizontal="start"
        alignChildrenVertical="end"
        direction="horizontal"
        gap="x4"
        style={
          Object {
            "marginTop": "-5rem",
          }
        }
      >
        <_default
          borderRadius="x2"
          margin="x0"
          src="/static/icon-flutter.svg"
          width="96px"
        />
        <Base
          paddingVertical="x2"
        >
          <Text
            color="gray-6"
            letterSpacing="x1"
            size="x3"
            weight="medium"
          >
            Updated on January 29, 2008
          </Text>
        </Base>
      </Flex>
      <Flex
        direction="vertical"
        gap="x2"
      >
        <Flex
          alignChildrenVertical="middle"
          direction="horizontal"
          gap="x1"
        >
          <Icon
            color="grape-4"
            name="PlatformsApple"
            size="1.5rem"
          />
          <Text
            breakOn="all"
            color="grape-4"
            letterSpacing="x1"
            size="x5"
            weight="bold"
          >
            My app v1.1.0 (28)
          </Text>
        </Flex>
        <Text
          breakOn="all"
          color="grape-5"
        >
          This is a short description about my app. It is a good app. End of description.
        </Text>
      </Flex>
    </Flex>
  </Link>
</Link>
`;
